Końcowa aktualizacja projektu (prawdopodobnie) - migracja z application.properties na application.yml, dodanie customowej konfiguracji  mail w pliku application .yml